<resources>
    <string name="app_name">IMD</string>
    <string name="email">Email</string>
    <string name="your_email_id">Your email id</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log-in</string>
    <string name="password1">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="or">OR</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_a_user">Already a user ?</string>
    <string name="signup1">SIGNUP</string>
    <string name="email_id">Email id</string>
    <string name="login1">LOGIN</string>
    <string name="phone_number">Phone number</string>
    <string name="password2">Password</string>
    <string name="signup2">Signup</string>
    <string name="full_name">Full name</string>
    <string name="todo1">TODO</string>
    <string name="email_id1">Email id</string>
    <string name="phone_number1">Phone number</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="password3">Password</string>
    <string name="your_email_id1">Your email id</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="alternative_ph_number">Alternative Ph number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="pincode">Pincode</string>
    <string name="enter_residential_address">Enter Residential Address</string>
    <string name="language">Language</string>
    <string name="city">City</string>
    <string name="save">SAVE</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="page_2">page 2</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>
    <string name="todo31">TODO</string>
</resources>