<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F1EBEB"
    android:backgroundTint="#00F6F0F0"
    android:foregroundTint="#E61515">

    <View
        android:id="@+id/view8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginBottom="656dp"
        android:background="#EC0707"
        android:backgroundTint="#E40F0F"
        android:fontFamily="@font/lusitana"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="202dp"
        android:layout_height="214dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="460dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/profile" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="237dp"
        android:layout_height="93dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="368dp"
        android:autofillHints=""
        android:background="#E8E0E0"
        android:backgroundTint="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:gravity="start|top"
        android:hint="@string/enter_residential_address"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="308dp"
        android:autofillHints=""
        android:background="#E6E6E6"
        android:backgroundTint="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="308dp"
        android:autofillHints=""
        android:background="#E6E6E6"
        android:backgroundTint="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:hint="@string/pincode"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <EditText
        android:id="@+id/editTextPhone3"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="236dp"
        android:autofillHints=""
        android:background="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:hint="@string/alternative_ph_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="172dp"
        android:autofillHints=""
        android:background="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:hint="@string/language"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="168dp"
        android:autofillHints=""
        android:background="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="256dp"
        android:layout_height="59dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="92dp"
        android:autofillHints=""
        android:background="#E6E6E6"
        android:ems="10"
        android:fontFamily="@font/lusitana"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <View
        android:id="@+id/view9"
        android:layout_width="411dp"
        android:layout_height="78dp"
        android:background="#E6E6E6"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="236dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo4"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="76dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="376dp"
        android:contentDescription="@string/todo5"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="69dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/todo8"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/img_1" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo15"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/icons8_home"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo14"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/songs"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="52dp"
        android:layout_height="57dp"
        android:layout_marginBottom="301dp"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:srcCompat="@drawable/location1"
        android:contentDescription="@string/todo23" />

</androidx.constraintlayout.widget.ConstraintLayout>